# GFAse

./: .gitignore  CMakeLists.txt  README.md
data/: big_test.gfa  big_test_maternal_kmers.fasta  big_test_paternal_kmers.fasta  chain_test.gfa  connected_components.gfa  connected_components.gfai  hg03.all.homo.unique.kmer.1000.fa  hg04.all.homo.unique.kmer.1000.fa  simple_chain.gfa  simple_chain.gfai  simple_chain_empty_node.gfa  simple_chain_interfering_bubble.gfa  simple_chain_long_haploid.gfa  simple_chain_maternal_kmers.fasta  simple_chain_maternal_kmers_rc.fasta  simple_chain_paternal_kmers.fasta  test_gfa1.gfai  test_maternal_kmers.fasta  test_maternal_kmers_55bp.fasta  test_paternal_kmers.fasta  test_paternal_kmers_55bp.fasta  test_shasta_split.fasta  test_shasta_split.gfa
inc/: Bam.hpp  BinaryIO.hpp  BinarySequence.hpp  Bipartition.hpp  Bridges.hpp  BubbleGraph.hpp  Chainer.hpp  Color.hpp  ContactGraph.hpp  Filesystem.hpp  FixedBinarySequence.hpp  GfaReader.hpp  GraphUtility.hpp  HamiltonianChainer.hpp  HamiltonianPath.hpp  HaplotypePathKmer.hpp  Hasher.hpp  Hasher2.hpp  IncrementalIdMap.hpp  KmerSets.hpp  MultiContactGraph.hpp  MurmurHash2.hpp  MurmurHash3.hpp  Overlaps.hpp  Phase.hpp  PhaseAssign.hpp  SAMElement.hpp  Sam.hpp  Sequence.hpp  SubgraphOverlay.hpp  SvgPlot.hpp  Timer.hpp  VectorMultiContactGraph.hpp  align.hpp  binomial.hpp  chain.hpp  edge.hpp  gfa_to_handle.hpp  graph_utility.hpp  handle_to_gfa.hpp  (+5 more)
scripts/: assign_contig_by_alignment.py  binomial.py  compare_asmgene_eval.py  compare_contact_eval.py  compare_contacts.py  compare_length_distibutions.py  compare_qv_eval.py  compare_sv_eval.py  compare_whatshap_results.py  count_rle_instances.py  create_bandage_colors_for_shasta_phase_components.py  cross_align_phases.py  evaluate_hash_similarity.py  fill_gfa_sequences_from_fasta.py  find_bubbles.py  get_haplotypes_from_shasta.py  get_path_length.py  gfa_to_fasta.py  label_edges.py  locate_cigar_events.py  merge_phased_fasta.py  plot_alignment_graph.py  plot_bed_coordinates.py  plot_kmer_score_vs_align_score.py  plot_ngx.py  plot_parental_kmers_across_bubblechain.py  plot_vcf_coordinates.py  split_singleton_phase_chains.py  strip_gfa_sequence.py  trim_gfa_sequences.py
scripts/modules/: IterativeHistogram.py  Paf.py
src/: Bam.cpp  BinaryIO.cpp  BinarySequence.cpp  Bipartition.cpp  Bridges.cpp  BubbleGraph.cpp  Chainer.cpp  Color.cpp  ContactGraph.cpp  FixedBinarySequence.cpp  GfaReader.cpp  GraphUtility.cpp  HamiltonianChainer.cpp  HamiltonianPath.cpp  HaplotypePathKmer.cpp  Hasher.cpp  Hasher2.cpp  IncrementalIdMap.cpp  KmerSets.cpp  MultiContactGraph.cpp  MurmurHash2.cpp  MurmurHash3.cpp  Overlaps.cpp  PafElement.cpp  Phase.cpp  PhaseAssign.cpp  SAMElement.cpp  Sam.cpp  Sequence.cpp  SubgraphOverlay.cpp  SvgPlot.cpp  Timer.cpp  VectorMultiContactGraph.cpp  a.cpp  align.cpp  binomial.cpp  chain.cpp  edge.cpp  gfa_to_handle.cpp  graph_utility.cpp  (+5 more)
src/executable/: assign_phases_via_diploid_alignment.cpp  compute_minhash.cpp  compute_minhash2.cpp  count_kmers.cpp  create_bandage_path_color_table.cpp  evaluate_contacts.cpp  evaluate_phasing.cpp  extract_haplotype_kmers.cpp  extract_haplotype_kmers_count_parent_kmers.cpp  find_bubbles.cpp  find_shasta_bubbles.cpp  generate_contact_map_from_bam.cpp  generate_contact_map_from_sam.cpp  get_degree_stats.cpp  get_mapq_distribution_from_sam.cpp  get_path_lengths.cpp  gfase.cpp  locate_kmer_matches.cpp  phase_contacts.cpp  phase_contacts_as_tripartition.cpp  phase_contacts_with_monte_carlo.cpp  phase_haplotype_paths.cpp  remove_empty_nodes.cpp  rephase_tripartition.cpp  rephase_tripartition_with_monte_carlo.cpp  split_connected_components.cpp  unzip.cpp
src/test/: test_alignment_chain.cpp  test_assign_phase.cpp  test_bamtools.cpp  test_bfs.cpp  test_binary_sequence.cpp  test_binary_sequence_performance.cpp  test_binary_sequence_sparsepp_performance.cpp  test_binomial.cpp  test_bridges.cpp  test_bubble_align.cpp  test_bubble_graph.cpp  test_bubblegraph_chaining.cpp  test_chainer.cpp  test_connected_component_finder.cpp  test_contact_graph.cpp  test_fixed_binary_sequence.cpp  test_fixed_binary_sequence_performance_2.cpp  test_fixed_binary_sequence_sparsepp_performance.cpp  test_gfareader.cpp  test_hamiltonian_chainer.cpp  test_hamiltonian_path.cpp  test_htslib.cpp  test_htslib_bam_reader.cpp  test_incremental_id_io.cpp  test_kmer_unordered_set.cpp  test_libsnarls.cpp  test_load_gfa.cpp  test_minimal_sparsepp_performance.cpp  test_minimal_stl_performance.cpp  test_minimap2.cpp  test_minimap2_no_io.cpp  test_multi_contact_graph.cpp  test_multi_contact_graph_io.cpp  test_nonbinary_sequence_performance.cpp  test_nonbinary_sequence_sparsepp_performance.cpp  test_overlaps.cpp  test_phase_haplotype_paths.cpp  test_rechain.cpp  test_rgb_to_hex.cpp  test_set_intersection.cpp  (+3 more)
tbd/: OverlapMap.cpp  OverlapMap.hpp  PafElement.hpp  evaluate_phasing.cpp  find_overlapping_alignments.cpp  gfa_to_handle.cpp  gfa_to_handle.hpp  test_gfak.cpp
